--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "lib"]
 	path = lib
-	url = git@github.com:LachlanPaulsen/DSpirolateral.git
+	url = git@github.com:ebm539/DSpirolateral.git
